Correct the pom location in javatoscachecker
Location needs to include subproject in path. Also corrects trigger job name for csit job.

Change-Id: Ic0d936682e6479d3a7ee4cda6540939badd3f5cb
Issue-Id: MODELING-26
Signed-off-by: Serban Jora <jora@research.att.com>

--- a/jjb/modeling/modeling-toscaparsers-javatoscachecker-csit.yaml
+++ b/jjb/modeling/modeling-toscaparsers-javatoscachecker-csit.yaml
@@ -10,6 +10,6 @@
     functionality:
       - 'APIs':
           trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+            - '{project-name}-{stream}-release-java-daily'
     robot-options: ''
     branch: 'master'
