Add batch (-B) argument to *-stage-site-java
Issue: CIMAN-97
Change-Id: Ice288329dac657bf2d1adfa8fff535d5672f30e3
Signed-off-by: Christopher Lott (cl778h) <clott@research.att.com>

--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -2146,7 +2146,7 @@
       - maven-target:
           maven-version: '{maven-version}'
           pom: '{site-pom}'
-          goals: 'clean site:site site:stage-deploy'
+          goals: 'clean site:site site:stage-deploy -B'
           settings: '{mvn-settings}'
           settings-type: cfp
           global-settings: 'global-settings'
