--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -5,6 +5,7 @@
     jobs:
       - gerrit-maven-clm:
           java-version: ''
+          build-timeout: 60
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
