--- a/jjb/portal/portal.yaml
+++ b/jjb/portal/portal.yaml
@@ -11,6 +11,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'release-1.3.0':
+          branch: 'release-1.3.0'
     mvn-settings: 'portal-settings'
     files: '**'
     archive-artifacts: ''
