Add nfvparser pom location to CLM job
Use mvn-params to specify location of the pom
file

Issue-ID: CIMAN-65
Change-Id: Idef2b1273dacb52ba0c8b57daafd1af5b445b50a
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
+++ b/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
@@ -18,6 +18,7 @@
       - '{project-name}-{stream}-{subproject}-verify-python'
       - gerrit-maven-clm:
           java-version: ''
+          mvn-params: '-f nfvparser/pom.xml'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily-no-sonar'
