--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -5,10 +5,17 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'sdc'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'release-1.1.0':
+          branch: 'release-1.1.0'
     functionality:
       - 'sanity':
           trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+            - '{project-name}-{stream}-sdc-merge-java'
+      - 'nightly':
+          trigger_jobs:
+            - '{project-name}-{stream}-docker-version-java-daily'
     robot-options: ''
     branch: 'master'
