--- a/jjb/policy/policy-drools-pdp.yaml
+++ b/jjb/policy/policy-drools-pdp.yaml
@@ -5,6 +5,7 @@
     jobs:
       - gerrit-maven-clm:
           java-version: ''
+          mvn-params: '-DskipTests'
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
