--- a/jjb/portal/portal-docker.yaml
+++ b/jjb/portal/portal-docker.yaml
@@ -4,28 +4,26 @@
     name: portal-docker
     project-name: 'portal-docker'
     jobs:
-      - '{project-name}-{stream}-three-scm-verify-script':
+      - '{project-name}-{stream}-two-scm-verify-script':
           script:
             !include-raw-escape: 'docker-build-deploy.sh'
-      - '{project-name}-{stream}-merge-docker-script':
+      - '{project-name}-{stream}-two-scm-merge-docker-script':
           script:
             !include-raw-escape: 'docker-build-push.sh'
-      - '{project-name}-{stream}-release-docker-script-manual':
+      - '{project-name}-{stream}-two-scm-release-docker-script-manual':
           script:
             !include-raw-escape: 'docker-build-release.sh'
     project: 'portal'
     stream:
       - 'master':
           branch: 'master'
+      - 'release-1.3.0':
+          branch: 'release-1.3.0'
     mvn-settings: 'portal-settings'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-docker-8c-8g
-    extra-project1: 'portal/sdk'
-    extra-branch1: '{branch}'
-    extra-refspec1: 'refs/heads/{branch}'
-    checkout-dir1: 'sdk'
-    extra-project2: 'ui/dmaapbc'
-    extra-branch2: '{branch}'
-    extra-refspec2: 'refs/heads/{branch}'
-    checkout-dir2: 'dmaapbc'
+    extra-project: 'portal/sdk'
+    extra-branch: '{branch}'
+    extra-refspec: 'refs/heads/{branch}'
+    checkout-dir: 'sdk'
