--- a/jjb/portal/portal-docker.yaml
+++ b/jjb/portal/portal-docker.yaml
@@ -4,7 +4,7 @@
     name: portal-docker
     project-name: 'portal-docker'
     jobs:
-      - '{project-name}-{stream}-three-scm-verify-script':
+      - '{project-name}-{stream}-two-scm-verify-script':
           script:
             !include-raw-escape: 'docker-build-deploy.sh'
       - '{project-name}-{stream}-merge-docker-script':
@@ -17,6 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'release-1.3.0':
+          branch: 'release-1.3.0'
     mvn-settings: 'portal-settings'
     files: '**'
     archive-artifacts: ''
@@ -25,7 +27,3 @@
     extra-branch1: '{branch}'
     extra-refspec1: 'refs/heads/{branch}'
     checkout-dir1: 'sdk'
-    extra-project2: 'ui/dmaapbc'
-    extra-branch2: '{branch}'
-    extra-refspec2: 'refs/heads/{branch}'
-    checkout-dir2: 'dmaapbc'
