--- a/jjb/portal/portal-docker.yaml
+++ b/jjb/portal/portal-docker.yaml
@@ -17,6 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'release-1.3.0':
+          branch: 'release-1.3.0'
     mvn-settings: 'portal-settings'
     files: '**'
     archive-artifacts: ''
