Drop use of maven versions plugin
Portal manages its version numbers in its POM files,
not using version.properties. Change templates to
stop invoking the versions:set plugin.

Issue: PORTAL-134
Change-Id: I8d36e788f24046eca045da534e206bc4034c11f8
Signed-off-by: Christopher Lott (cl778h) <clott@research.att.com>

--- a/jjb/portal/portal.yaml
+++ b/jjb/portal/portal.yaml
@@ -3,10 +3,10 @@
     name: portal
     project-name: 'portal'
     jobs:
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-release-java-daily'
       - '{project-name}-{stream}-stage-site-java':
           site-pom: 'pom.xml'
-          trigger-job: '{project-name}-{stream}-release-version-java-daily'
+          trigger-job: '{project-name}-{stream}-release-java-daily'
     project: 'portal'
     stream:
       - 'master':
