--- a/jjb/portal-sdk/portal-sdk.yaml
+++ b/jjb/portal-sdk/portal-sdk.yaml
@@ -23,6 +23,8 @@
           branch: 'master'
       - 'release-1.3.1':
           branch: 'release-1.3.1'
+      - 'release-1.3.2':
+          branch: 'release-1.3.2'
     mvn-settings: 'portal-sdk-settings'
     files: '**'
     archive-artifacts: ''
