Add vnfsdk compliance pkg vesjava for nexus repo
Issue-Id: VNFSDK-122
Change-Id: Id81ed90d777aee0009ad44dfb8eae6fc193dcab7
Signed-Off-by: Gokul Singaraju <goksing@gmail.com>

--- a/jjb/vnfsdk/vnfsdk-compliance.yaml
+++ b/jjb/vnfsdk/vnfsdk-compliance.yaml
@@ -1,6 +1,6 @@
 ---
 - project:
-    name: vnfsdk-refrepo
+    name: vnfsdk-compliance
     project-name: 'vnfsdk-compliance'
     jobs:
       - gerrit-maven-clm:
