Increase build timeout for aai-service CLM job
Increase from 15 to 45 mins

Issue-ID: CIMAN-65
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I4b4761713e0529cf7cf9b10b602d15b80fa7aa4d

--- a/jjb/aai/aai-aai-service.yaml
+++ b/jjb/aai/aai-aai-service.yaml
@@ -5,6 +5,7 @@
     jobs:
       - gerrit-maven-clm:
           java-version: ''
+          build-timeout: 45
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
