Disable tests during CLM run for appc
Tests are making the CLM job run for too long
(more than 90 mins).
We don't need the tests part for CLM reports

Change-Id: Id075e1475d9eede57943271e513f4c1ca8e3d849
Issue-ID: CIMAN-65
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -5,7 +5,7 @@
     jobs:
       - gerrit-maven-clm:
           java-version: ''
-          build-timeout: 60
+          mvn-params: '-DskipTests'
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
