Add jobs for cli release-1.1.0
Issue-Id: CLI-70

Change-Id: Ib0be1092ed47a396ca8cfadc339723c38effec5d
Signed-off-by: Kanagaraj Manickam k00365106 <kanagaraj.manickam@huawei.com>

--- a/jjb/cli/cli-csit.yaml
+++ b/jjb/cli/cli-csit.yaml
@@ -5,7 +5,11 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'cli'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'release-1.1.0':
+          branch: 'release-1.1.0'
     functionality:
       - 'sanity-check':
           trigger_jobs:
