Use new jjb template for search-data-service
Use jjb template which will allow autorelease repo to be created

IssueID: AAI-458
Change-Id: I80c48c9a8e2d563a1f0e5e05dc0deb39e8f9c83d
Signed-off-by: sblimkie <steven.blimkie@amdocs.com>

--- a/jjb/aai/aai-search-data-service.yaml
+++ b/jjb/aai/aai-search-data-service.yaml
@@ -7,10 +7,10 @@
           java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-java-daily'
-      - '{project-name}-{stream}-aai-docker-java-daily':
+      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-aai-docker-java-version-daily':
           pom: 'pom.xml'
-          mvn-goals: 'docker:build'
+          mvn-goals: 'docker:build docker:push'
     project: 'aai/search-data-service'
     stream:
       - 'master':
