Fix jjb template to publish to staging
Change-Id: I748d0b44495c5e065891650ee8cba8b504f39986
Issue-Id: MODELING-28
Signed-off-by: Serban Jora <jora@research.att.com>

--- a/jjb/modeling/modeling-toscaparsers-javatoscachecker-csit.yaml
+++ b/jjb/modeling/modeling-toscaparsers-javatoscachecker-csit.yaml
@@ -10,6 +10,6 @@
     functionality:
       - 'APIs':
           trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily'
+            - '{project-name}-{stream}-release-version-java-daily'
     robot-options: ''
     branch: 'master'
