--- a/jjb/aai/aai-search-data-service.yaml
+++ b/jjb/aai/aai-search-data-service.yaml
@@ -8,9 +8,9 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
-      - '{project-name}-{stream}-aai-docker-java-version-daily':
+      - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'pom.xml'
-          mvn-goals: 'docker:build docker:push'
+          mvn-goals: 'docker:build'
     project: 'aai/search-data-service'
     stream:
       - 'master':
