Use new jjb templates for aai services
The model-loader, data-router, and sparky services will use the jjb
template which will allow creation of the autorelease repo.

IssueID: AAI-458
Change-Id: I4c8ac156aac079778022f61d0e82e80c56e22ef5
Signed-off-by: sblimkie <steven.blimkie@amdocs.com>

--- a/jjb/aai/aai-data-router.yaml
+++ b/jjb/aai/aai-data-router.yaml
@@ -7,7 +7,7 @@
           java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'pom.xml'
           mvn-goals: 'docker:build'
