Add TestNG configuration to CSIT int jobs
Configure TestNG and HTML reports in csit verify
integration jobs.

Change-Id: Ice21209de50e7bdd568d1a3cdee69e62963a3d3d
Issue-ID: CIMAN-119
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -15,6 +15,22 @@
           default: '{test-options}'
           description: 'Robot command options'
 
+- parameter:
+    name: html-publisher-dir
+    parameters:
+      - string:
+          name: HTMLDIR
+          default: '{html-dir}'
+          description: 'Directory location to be used by HTML publisher plugin'
+
+- parameter:
+    name: html-publisher-files
+    parameters:
+      - string:
+          name: HTMLFILES
+          default: '{html-files}'
+          description: 'File name to be used by HTML publisher plugin to produce the report'
+
 - builder:
     name: integration-install-robotframework
     builders:
