--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -54,6 +54,76 @@
       - lf-infra-publish
 
 - job-template:
+    name: '{project-name}-{stream}-verify-csit-{functionality}-testng'
+    disabled: false
+
+    project-type: freestyle
+    build-node: 'ubuntu1604-docker-8c-8g'
+    node: '{build-node}'
+
+    properties:
+      - lf-infra-properties:
+          project: 'integration'
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: 'integration'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-test-plan:
+          test-plan: 'plans/{project-name}/{functionality}'
+      - integration-test-options:
+          test-options: '{robot-options}'
+      - html-publisher-dir:
+          html-dir: 'archives/logs/{project-name}-sanity/extent-report'
+      - html-publisher-files:
+          html-files: '{project-name}-extent-report.html'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: '$GERRIT_REFSPEC'
+          choosing-strategy: 'gerrit'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - lf-infra-wrappers:
+          build-timeout: '{build-timeout}'
+          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+
+    triggers:
+      - gerrit-trigger-patch-submitted:
+          server: '{server-name}'
+          project: 'integration'
+          branch: '{branch}'
+          files: 'test/csit/**/{project-name}/**'
+
+    builders:
+      - integration-install-robotframework
+      - inject:
+          properties-file: 'env.properties'
+      - integration-run-test
+
+    publishers:
+      - integration-robot:
+          unstable-if: 0.0
+          pass-if: 100.0
+      - lf-infra-publish
+      - testng:
+          pattern: archives/testng-results.xml
+          escape-test-description: true
+          escape-exception-msg: true
+          show-failed-builds: true
+      - html-publisher:
+          allow-missing: false
+          dir: archives/logs/sdc-sanity/ExtentReport
+          files: SDC_CI_Extent_Report.html
+          keep-all: false
+          link-to-last-build: false
+          name: ExtentReport
+
+- job-template:
     name: '{project-name}-{stream}-csit-{functionality}'
     disabled: false
 
