--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -52,6 +52,23 @@
           unstable-if: 0.0
           pass-if: 100.0
       - lf-infra-publish
+      - raw:
+          xml: |
+            <hudson.plugins.testng.Publisher plugin="testng-plugin@1.10">
+            <reportFilenamePattern>archives/testng-results.xml</reportFilenamePattern>
+            <escapeTestDescp>true</escapeTestDescp>
+            <escapeExceptionMsg>true</escapeExceptionMsg>
+            <showFailedBuilds>true</showFailedBuilds>
+            <unstableOnSkippedTests>false</unstableOnSkippedTests>
+            <failureOnFailedTestConfig>false</failureOnFailedTestConfig>
+            </hudson.plugins.testng.Publisher>
+      - html-publisher:
+          allow-missing: false
+          dir: archives//logs/sdc-sanity/ExtentReport
+          files: SDC_CI_Extent_Report.html
+          keep-all: false
+          link-to-last-build: false
+          name: ExtentReport
 
 - job-template:
     name: '{project-name}-{stream}-csit-{functionality}'
