Add policy amsterdam branch jobs
Add policy amsterdam branch jobs.

Change-Id: I35eaf6a4d0cf71b70b77a4ccdbe9b47b9ddfb738
Issue-ID: POLICY-453
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-common.yaml
+++ b/jjb/policy/policy-common.yaml
@@ -35,6 +35,8 @@
     stream:
       - 'release-1.0.0':
           branch: 'release-1.0.0'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'policy-common-settings'
     files: '**'
     archive-artifacts: ''
