--- a/jjb/policy/policy-docker.yaml
+++ b/jjb/policy/policy-docker.yaml
@@ -24,6 +24,8 @@
           branch: 'master'
       - 'release-1.0.0':
           branch: 'release-1.0.0'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'policy-docker-settings'
     files: '**'
     archive-artifacts: ''
