--- a/jjb/policy/policy-drools-applications.yaml
+++ b/jjb/policy/policy-drools-applications.yaml
@@ -38,3 +38,22 @@
     mvn-settings: 'policy-drools-applications-settings'
     files: '**'
     archive-artifacts: ''
+- project:
+    name: policy-drools-applications-amsterdam
+    project-name: 'policy-drools-applications'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-stage-site-java':
+          site-pom: 'pom.xml'
+          trigger-job: '{project-name}-{stream}-release-version-java-daily'
+
+    project: 'policy/drools-applications'
+    stream:
+      - 'amsterdam':
+          branch: 'amsterdam'
+    mvn-settings: 'policy-drools-applications-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: 'ubuntu1604-basebuild-4c-4g'
