--- a/jjb/policy/policy-engine.yaml
+++ b/jjb/policy/policy-engine.yaml
@@ -39,3 +39,23 @@
     mvn-settings: 'policy-engine-settings'
     files: '**'
     archive-artifacts: ''
+- project:
+    name: policy-engine-amsterdam
+    project-name: 'policy-engine'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
+      - '{project-name}-{stream}-stage-site-java':
+          build-node: 'ubuntu1604-basebuild-4c-4g'
+          site-pom: 'pom.xml'
+          trigger-job: '{project-name}-{stream}-release-version-java-daily'
+
+    project: 'policy/engine'
+    stream:
+      - 'amsterdam':
+          branch: 'amsterdam'
+    mvn-settings: 'policy-engine-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: 'ubuntu1604-basebuild-4c-4g'
