--- a/jjb/vnfsdk/vnfsdk-compliance.yaml
+++ b/jjb/vnfsdk/vnfsdk-compliance.yaml
@@ -5,6 +5,7 @@
     jobs:
       - gerrit-maven-clm:
           java-version: ''
+          mvn-params: '-f veslibrary/ves_javalibrary/evel_javalib2/pom.xml'
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
