Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for aai repos

Change-Id: I18ff033322216cdf614b99bc3c2c3f0c3ee2cf6a
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aai/aai-aai-common.yaml
+++ b/jjb/aai/aai-aai-common.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'aai-aai-common-settings'
     files: '**'
     archive-artifacts: ''
