--- a/jjb/aai/aai-logging-service.yaml
+++ b/jjb/aai/aai-logging-service.yaml
@@ -14,6 +14,8 @@
           branch: 'master'
       - 'release-1.0.0':
           branch: 'release-1.0.0'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'aai-logging-service-settings'
     files: '**'
     archive-artifacts: ''
