--- a/jjb/aai/aai-model-loader.yaml
+++ b/jjb/aai/aai-model-loader.yaml
@@ -15,6 +15,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'aai-model-loader-settings'
     files: '**'
     archive-artifacts: ''
