--- a/jjb/sdc/sdc-jtosca.yaml
+++ b/jjb/sdc/sdc-jtosca.yaml
@@ -17,6 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
       - 'release-1.1.0':
           branch: 'release-1.1.0'
     mvn-settings: 'sdc-jtosca-settings'
