Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for multicloud repos

Change-Id: Id8664eb63b52e3c6b09fc58025886ced2af7b2bf
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/multicloud/multicloud-framework-java.yaml
+++ b/jjb/multicloud/multicloud-framework-java.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'multicloud-framework-settings'
     subproject:
       - 'multivimbroker':
