--- a/jjb/multicloud/multicloud-framework-python.yaml
+++ b/jjb/multicloud/multicloud-framework-python.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'multicloud-framework-settings'
     build-node: 'ubuntu1604-basebuild-4c-4g'
     subproject:
