--- a/jjb/multicloud/multicloud-openstack-vmware-java.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-java.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'multicloud-openstack-vmware-settings'
     subproject:
       - 'vio':
