Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for vfc repos

Change-Id: I8c9e2d3947277dc22ab939440c992d810719ec57
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vfc/vfc-nfvo-driver-ems-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-ems-java.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-nfvo-driver-ems-settings'
     subproject:
       - 'drv-ems-boco':
