--- a/jjb/vfc/vfc-gvnfm-vnflcm-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnflcm-java.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-gvnfm-vnflcm-settings'
     subproject:
       - 'lcm':
