--- a/jjb/vfc/vfc-gvnfm-vnfmgr-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnfmgr-java.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-gvnfm-vnfmgr-settings'
     subproject:
       - 'mgr':
