--- a/jjb/vfc/vfc-nfvo-driver-sfc.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-sfc.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-nfvo-driver-sfc-settings'
     subproject:
       - 'driver-sfc-zte':
