--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-zte-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-zte-java.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-nfvo-driver-vnfm-svnfm-settings'
     subproject:
       - 'drv-vnfm-zte':
