--- a/jjb/vfc/vfc-nfvo-wfengine-java.yaml
+++ b/jjb/vfc/vfc-nfvo-wfengine-java.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-nfvo-wfengine-settings'
     subproject:
       - 'engine-mgr-service':
