Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for dmaap repos

Change-Id: I94be59738e198587ee63a2e0423fe2d9d3fba047
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/dmaap/dmaap-messagerouter-dmaapclient.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-dmaapclient.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'dmaap-messagerouter-dmaapclient-settings'
     files: '**'
     archive-artifacts: ''
