--- a/jjb/holmes/holmes-common.yaml
+++ b/jjb/holmes/holmes-common.yaml
@@ -13,6 +13,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'holmes-common-settings'
     files: '**'
     archive-artifacts: ''
