--- a/jjb/holmes/holmes-engine-mgt.yaml
+++ b/jjb/holmes/holmes-engine-mgt.yaml
@@ -14,6 +14,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'holmes-engine-management-settings'
     files: '**'
     archive-artifacts: ''
