--- a/jjb/dcaegen2/dcaegen2-platform-servicechange-handler.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-servicechange-handler.yaml
@@ -15,6 +15,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'dcaegen2-platform-servicechange-handler-settings'
     # due to a strange macro / variable translation problem this needs
     # to be passed as a string block to properly get the properties
