Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for policy repos

Change-Id: Ib63c43f4e8577afc1c62052fbfbc342e1538d5cb
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/policy/policy-drools-pdp.yaml
+++ b/jjb/policy/policy-drools-pdp.yaml
@@ -17,6 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'policy-drools-pdp-settings'
     files: '**'
     archive-artifacts: ''
