Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for vid repos

Change-Id: Ieecaad1279a5c34592602456139b07c3b48d6a33
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vid/vid.yaml
+++ b/jjb/vid/vid.yaml
@@ -20,6 +20,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vid-settings'
     files: '**'
     archive-artifacts: ''
