--- a/jjb/vid/vid-asdcclient.yaml
+++ b/jjb/vid/vid-asdcclient.yaml
@@ -13,6 +13,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vid-settings'
     files: '**'
     archive-artifacts: ''
