Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for msb repos

Change-Id: I23c0cefe52e8644a5767241c75e63d9ae3ca67fa
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/msb/msb-apigateway.yaml
+++ b/jjb/msb/msb-apigateway.yaml
@@ -21,6 +21,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'msb-apigateway-settings'
     files: '**'
     archive-artifacts: ''
