--- a/jjb/msb/msb-discovery.yaml
+++ b/jjb/msb/msb-discovery.yaml
@@ -20,6 +20,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'msb-discovery-settings'
     files: '**'
     archive-artifacts: ''
