--- a/jjb/msb/msb-java-sdk.yaml
+++ b/jjb/msb/msb-java-sdk.yaml
@@ -12,6 +12,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'msb-java-sdk-settings'
     files: '**'
     archive-artifacts: ''
