Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for clamp repos

Change-Id: Ia191891beba60f925d0b480329bd16b07d45ac42
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -29,6 +29,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'clamp-settings'
     files: '**'
     archive-artifacts: ''
