--- a/jjb/cli/cli.yaml
+++ b/jjb/cli/cli.yaml
@@ -21,6 +21,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
       - 'release-1.1.0':
           branch: 'release-1.1.0'
     mvn-settings: 'cli-settings'
