--- a/jjb/cli/cli.yaml
+++ b/jjb/cli/cli.yaml
@@ -21,8 +21,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'release-1.1.0':
-          branch: 'release-1.1.0'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'cli-settings'
     files: '**'
     archive-artifacts: ''
