--- a/jjb/usecaseui/usecase-ui-server.yaml
+++ b/jjb/usecaseui/usecase-ui-server.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'usecase-ui-server-settings'
     jobs:
       - '{project-name}-{stream}-verify-java'
