Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for oparent repos

Change-Id: I6eb73e710aaf6239948096be6a92e66e05980726
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/oparent/oparent.yaml
+++ b/jjb/oparent/oparent.yaml
@@ -17,6 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'oparent-settings'
     files: '**'
     archive-artifacts: ''
