Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for vnfsdk repos

Change-Id: Ie7d95eb1bdbd96a6ce5050aace26c942c8882231
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfsdk/vnfsdk-refrepo.yaml
+++ b/jjb/vnfsdk/vnfsdk-refrepo.yaml
@@ -20,6 +20,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vnfsdk-refrepo-settings'
     files: '**'
     archive-artifacts: ''
