--- a/jjb/portal-sdk/portal-sdk.yaml
+++ b/jjb/portal-sdk/portal-sdk.yaml
@@ -21,6 +21,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
       - 'release-1.3.1':
           branch: 'release-1.3.1'
       - 'release-1.3.2':
