--- a/jjb/dcaegen2/apod-analytics.yaml
+++ b/jjb/dcaegen2/apod-analytics.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
 
     # apply to all jobs
     project: 'dcaegen2/analytics/tca'
