Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for portal repos

Change-Id: I45fd068b9ea3c42bca43847abd2d234172c2766c
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/integration/integration-docker.yaml
+++ b/jjb/integration/integration-docker.yaml
@@ -9,6 +9,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     subproject:
       - 'sniroemulator':
           pom: 'test/mocks/sniroemulator/pom.xml'
