Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates
for portal repos

Change-Id: Ia5a77080e5f27fd92ce0bfc432c3d610d8c2390f
Issue-ID: CIMAN-120
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/testsuite/testsuite.yaml
+++ b/jjb/testsuite/testsuite.yaml
@@ -26,6 +26,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
       - 'release-1.0.0':
           branch: 'release-1.0.0'
     mvn-settings: 'testsuite-settings'
