--- a/jjb/testsuite/testsuite-heatbridge-master.yaml
+++ b/jjb/testsuite/testsuite-heatbridge-master.yaml
@@ -13,6 +13,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'testsuite-heatbridge-settings'
     files: '**'
     archive-artifacts: ''
