--- a/jjb/testsuite/testsuite-python-testing-utils.yaml
+++ b/jjb/testsuite/testsuite-python-testing-utils.yaml
@@ -14,6 +14,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
       - 'release-1.0.0':
           branch: 'release-1.0.0'
     mvn-settings: 'testsuite-python-testing-utils-settings'
