Add the amsterdam jobs for aai repos
Issue-ID: AAI-520
Change-Id: I4de175c6186ecf0b94ceeb292eade74443342886
Signed-off-by: Venkata Harish K Kajur <vk250x@att.com>

--- a/jjb/aai/aai-champ.yaml
+++ b/jjb/aai/aai-champ.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'aai-champ-settings'
     files: '**'
     archive-artifacts: ''
