add amsterdam stream for csit job
Change-Id: Id882d5660dbedcee5031cebde7c48e567b93d052
Issue-ID: DCAEGEN2-206
Signed-off-by: Vijay Venkatesh Kumar <vv770d@att.com>

--- a/jjb/dcaegen2/dcaegen2-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-csit.yaml
@@ -4,11 +4,14 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'dcaegen2'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     functionality:
       - 'testsuites':
           trigger_jobs:
             - 'dcaegen2-master-merge-java'
             - 'dcaegen2-collectors-ves-master-merge-java'
     robot-options: ''
-    branch: 'master'
