Update sdc jjb jobs
Add testNG plugin parameters to sdc jobs

Change-Id: I8fca76611535ff9ec5646bd7f297c54fe0ba7164
Issue-ID: SDC-612
Signed-off-by: Yuli Shlosberg <ys9693@att.com>

--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -2,8 +2,8 @@
 - project:
     name: sdc-csit
     jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}'
-      - '{project-name}-{stream}-csit-{functionality}'
+      - '{project-name}-{stream}-verify-csit-{functionality}-testng'
+      - '{project-name}-{stream}-csit-{functionality}-testng'
     project-name: 'sdc'
     stream:
       - 'master':
@@ -17,3 +17,5 @@
             - '{project-name}-{stream}-docker-version-java-daily'
     robot-options: ''
     branch: 'master'
+    html-dir: 'archives'
+    html-files: 'SDC_CI_Extent_Report.html'
