Adding Amsterdam branch to SO Jenkins build.
Change-Id: Icf5e3a0b8bf63a6d476730d47251d47a2e1ab9b4
Issue-ID: SO-351
Signed-off-by: Arthur Martella <amartell@research.att.com>

--- a/jjb/so/so-csit.yaml
+++ b/jjb/so/so-csit.yaml
@@ -5,7 +5,11 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'so'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'amsterdam":
+          branch: 'amsterdam'
     functionality:
       - 'sanity-check':
           trigger_jobs:
