Add JUnit configuration to CSIT int jobs
Configure JUnit for testng csit verify integration jobs.

Issue-ID: CIMAN-119
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I42df47e930b01aa460d494d597353fb5d1c327df

--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -122,6 +122,9 @@
           keep-all: false
           link-to-last-build: false
           name: ExtentReport
+      - junit:
+          results: archives/testng-results.xml
+          health-scale-factor: 1.0
 
 - job-template:
     name: '{project-name}-{stream}-csit-{functionality}'
