--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -6,6 +6,7 @@
       - gerrit-maven-clm:
           java-version: ''
           mvn-params: '-DskipTests'
+          build-timeout: 30
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
