Add CLM jobs for vfc repos
Change-Id: I1ca53dae012c84aa59c749a59f913ec452032a3a
Issue-ID: CIMAN-65
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vfc/vfc-gvnfm-vnfmgr-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnfmgr-java.yaml
@@ -14,6 +14,8 @@
           pom: 'mgr/pom.xml'
           pattern: 'mgr/**'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
