--- a/jjb/vfc/vfc-nfvo-resmanagement.yaml
+++ b/jjb/vfc/vfc-nfvo-resmanagement.yaml
@@ -12,6 +12,8 @@
           branch: 'amsterdam'
     build-node: ubuntu1604-basebuild-4c-4g
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
