--- a/jjb/vfc/vfc-nfvo-wfengine-java.yaml
+++ b/jjb/vfc/vfc-nfvo-wfengine-java.yaml
@@ -22,6 +22,8 @@
           script:
             !include-raw-escape: 'build-nfvo-wfengine-engine-activiti-extension-docker-image.sh'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
