--- a/jjb/vfc/vfc-gvnfm-vnflcm-java.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnflcm-java.yaml
@@ -15,6 +15,8 @@
           pom: 'lcm/pom.xml'
           pattern: 'lcm/**'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
