--- a/jjb/vfc/vfc-nfvo-catalog.yaml
+++ b/jjb/vfc/vfc-nfvo-catalog.yaml
@@ -15,6 +15,8 @@
           path: '.'
           pattern: '**'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
