--- a/jjb/vfc/vfc-nfvo-driver-ems-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-ems-java.yaml
@@ -15,6 +15,8 @@
           pom: 'ems/pom.xml'
           pattern: 'ems/**'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
