--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-zte-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-zte-java.yaml
@@ -15,6 +15,8 @@
           pom: 'zte/vmanager/pom.xml'
           pattern: 'zte/vmanager/**'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily-no-sonar'
