--- a/jjb/vfc/vfc-nfvo-lcm-java.yaml
+++ b/jjb/vfc/vfc-nfvo-lcm-java.yaml
@@ -9,6 +9,8 @@
           branch: 'master'
     mvn-settings: 'vfc-nfvo-lcm-settings'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
