Add CLM jobs for clamp repos
Change-Id: Ia545db49b35be91dde16078f7ac31330c7bc98d0
Issue-ID: CIMAN-65
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -4,6 +4,8 @@
     name: clamp
     project-name: 'clamp'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java-checkstyle'
       - '{project-name}-{stream}-merge-properties-java':
          mvn_properties:
