--- a/jjb/dcaegen2/dcaegen2.yaml
+++ b/jjb/dcaegen2/dcaegen2.yaml
@@ -3,6 +3,8 @@
     name: dcaegen2
     project-name: 'dcaegen2'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
