Add CLM jobs for portal repos
Change-Id: I8ef76ac8ff09f9aca40765ed69cb246b627740f6
Issue-ID: CIMAN-65
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/portal/portal.yaml
+++ b/jjb/portal/portal.yaml
@@ -3,6 +3,8 @@
     name: portal
     project-name: 'portal'
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-release-java-daily'
       - '{project-name}-{stream}-stage-site-java':
           site-pom: 'pom.xml'
