--- a/jjb/vvp/vvp-jenkins.yaml
+++ b/jjb/vvp/vvp-jenkins.yaml
@@ -14,6 +14,8 @@
     mvn-settings: 'vvp-jenkins-settings'
     build-node: ubuntu1604-basebuild-4c-4g
     jobs:
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-docker-java-daily'
     docker-pom: 'pom.xml'
