--- a/jjb/vfc/vfc-nfvo-lcm-java.yaml
+++ b/jjb/vfc/vfc-nfvo-lcm-java.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-nfvo-lcm-settings'
     jobs:
       - '{project-name}-{stream}-verify-java'
