--- a/jjb/integration/integration-csit.yaml
+++ b/jjb/integration/integration-csit.yaml
@@ -5,11 +5,14 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'integration'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     functionality:
       - 'functionality1':
           trigger_jobs:
       - 'vCPE':
           trigger_jobs:
     robot-options: ''
-    branch: 'master'
