--- a/jjb/appc/appc-csit.yaml
+++ b/jjb/appc/appc-csit.yaml
@@ -5,10 +5,13 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'appc'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     functionality:
       - 'healthcheck':
           trigger_jobs:
             - '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
-    branch: 'master'
