--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -19,8 +19,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'release-1.1.0':
-          branch: 'release-1.1.0'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'sdc-settings'
     files: '**'
     archive-artifacts: ''
