Fix stream branches on aai-csit
Change-Id: I31d3fe0d60d7a87f193d4ac5aae165be1a163996
Issue-ID: CIMAN-120
Signed-off-by: Jeremy Phelps <jphelps@linuxfoundation.org>

--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -5,7 +5,11 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'aai'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: master
+      - 'amsterdam':
+          branch: amsterdam
     functionality:
       - 'resources':
           trigger_jobs:
@@ -17,6 +21,4 @@
           trigger_jobs:
             - 'aai-esr-server-{stream}-docker-java-daily'
     robot-options: ''
-    branch:
-      - 'master'
-      - 'amsterdam'
+
