Update the csit job to use streams
Issue-ID: AAI-559
Change-Id: I287149f8941296ddacf271eb5c53dc074d61fe34
Signed-off-by: Venkata Harish K Kajur <vk250x@att.com>

--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -6,10 +6,8 @@
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'aai'
     stream:
-      - 'master':
-          branch: master
-      - 'amsterdam':
-          branch: amsterdam
+      - 'master'
+      - 'amsterdam'
     functionality:
       - 'resources':
           trigger_jobs:
