Add amsterdam stream to JJB templates
Add amsterdam branch for jjb job templates for vfc repos

Change-Id: I8435b45cae39af554fcca33a58469015879e7eb2
Issue-ID: CIMAN-120
Signed-off-by: ying.yunlong <ying.yunlong@zte.com.cn>

--- a/jjb/vfc/vfc-nfvo-driver-svnfm-huawei.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-svnfm-huawei.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-nfvo-driver-vnfm-svnfm-settings'
     subproject:
       - 'drv-vnfm-huawei':
