--- a/jjb/vfc/vfc-nfvo-driver-vnfm-gvnfm-juju.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-gvnfm-juju.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-nfvo-driver-vnfm-gvnfm-settings'
     subproject:
       - 'gvnfm-juju':
