--- a/jjb/vfc/vfc-nfvo-lcm-python.yaml
+++ b/jjb/vfc/vfc-nfvo-lcm-python.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'vfc-nfvo-lcm-settings'
     build-node: centos7-redis-4c-4g
     subproject:
