--- a/jjb/appc/appc-release.yaml
+++ b/jjb/appc/appc-release.yaml
@@ -1,6 +1,6 @@
 ---
 - project:
-    name: appc-master
+    name: appc-release
     project-name: 'appc'
     jobs:
       - gerrit-maven-clm:
@@ -9,12 +9,12 @@
           build-timeout: 30
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
 
     project: 'appc'
     stream:
-      - 'master':
-          branch: 'master'
+      - 'amsterdam':
+          branch: 'amsterdam'
     mvn-settings: 'appc-settings'
     files: '**'
     archive-artifacts: ''
