Move APPC verify node into an 8c-8g one
Move to an 8c-8g node to avoid lack of space.

Change-Id: Iaf7e1a351f0ecd0f5745b40b9a009d3f742074ca
Issue-ID: CIMAN-121
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -8,6 +8,7 @@
           mvn-params: '-DskipTests'
           build-timeout: 30
       - '{project-name}-{stream}-verify-java'
+          build-node: ubuntu1604-basebuild-8c-8g
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
 
